--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,7 @@ wheel
 omegaconf>=2.0.6
 onnxruntime; sys_platform == 'darwin'
 onnxruntime-gpu; sys_platform != 'darwin'
+rich
 
 # Core dependencies
 PyYAML>=6.0
