--- a/main/configs/config.json
+++ b/main/configs/config.json
@@ -6,7 +6,7 @@
         "ja-JP",
         "vi-VN"
     ],
-    "theme": "gradio/default",
+    "theme": "Thatguy099/Sonix",
     "themes": [
         "Thatguy099/Sonix",
         "NoCrypt/miku",
