--- a/requirements.txt
+++ b/requirements.txt
@@ -4,7 +4,6 @@ wheel
 omegaconf>=2.0.6
 onnxruntime; sys_platform == 'darwin'
 onnxruntime-gpu; sys_platform != 'darwin'
-rich
 
 # Core dependencies
 PyYAML>=6.0
@@ -18,7 +17,7 @@ torchaudio>=2.3.1
 faiss-cpu>=1.7.3
 
 # Machine learning, NLP and deep learning
-transformers>=4.37.0
+transformers==4.49.0
 diffusers
 scikit-learn
 einops>=0.8.0
@@ -34,11 +33,10 @@ pedalboard
 numpy>=1.25.2,<2.0.0
 numba>=0.57.0
 scipy>=1.15.0
-pandas
 matplotlib>=3.7.2
 
 # Implementation and web framework
-gradio==5.29.1
+gradio>=5.23.3
 requests>=2.32.3
 aiohttp
 pysrt
