--- a/main/configs/config.json
+++ b/main/configs/config.json
@@ -543,7 +543,7 @@
     "f0_extractor_tab": true,
     "settings_tab": true,
     "report_bug_tab": true,
-    "font": "https://fonts.googleapis.com/css2?family=Roboto&display=swap",
+    "font": "",
     "app_port": 7860,
     "tensorboard_port": 6870,
     "num_of_restart": 5,
